# lucid-cove

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MESH.md  NOTICE  QUICKSTART.md  README.md  SECURITY.md  approve-device.patch  card-phone-https.patch  connect-computer.patch  cove.config.yaml  fix-register-username.patch  install.sh  pyproject.toml  settings-approve-device.patch
Docs/: blast-radius-map.md  tool-pwa-icons.md
_to_delete/: 1522-backup-relabel.patch  1628-agent-diagnose.patch  bio-wizard-copy.patch  d52-card-truth.patch
config/: agent.yaml.example  cove.yaml.example  market-rates.json  model-prices.json  models.yaml  profile-template.yaml  shared-agent.yaml
data/: agent-presets.json  lt_reference.json
docker/: Dockerfile  docker-compose.example.yml  entrypoint.sh  init-base.sql  umami-bootstrap.sql
docs/: ltp-tuner-v2-setup.md
migrations/: 013_fix_atlas_echo_agent_id.sql  013b_fix_atlas_echo_agent_id.sql  013c_fix_atlas_echo.sql  accountability-layer.sql  add-coaching-text.sql  add-cove-haven.sql  add-cove-matrix.sql  add-knowledge-base.sql  add-matrix-creds.sql  add-memory-embeddings.sql  add-memory-review-columns.sql  add-registry.sql  add-review-window.sql  fix-echo96-love-equation.sql  strip-household-suffix-v2.sql  strip-household-suffix.sql  task-system-v2.sql
provision/: acmedns.py  centralized.py  cloudflare_dns.py  cloudflare_tunnel.py  cove-lifecycle.sh  cove.config.example.yaml  dendrite_config.py  enable_tunnel.py  mesh.py  netconfig.py  runtime_address.py  set_domain.py  storage.py
runbooks/: 01-update-cove.json  02-restart-cove.json  03-view-logs.json  (+5 more)
(+564 files in other folders)
