[project]
name = "cove-core"
version = "1.0.0"
description = "Shared agent template — config-driven Mission Control with LTP protocol"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "schedule>=1.2",
    "pytz>=2024.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "caldav>=1.3",
    "vobject>=0.9.7",
    "icalendar>=5.0",
    "python-multipart>=0.0.9",
    "requests-oauthlib>=2.0",
    "cryptography>=42.0",
    "pillow>=10.4",
    "pillow-heif>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Open-source LTP Drop client. Moves into the base dependencies once
# lucid-tuner-protocol is published (at the open-source flip). Until then the
# public-Drop tuning is optional: src/tuning/public_drop.py imports it
# defensively and the Cove runs fine without it.
ltp = [
    "lucid-tuner-protocol>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
